...
    struct TestIdentifiers {
        static let theoreticalTab = "theoreticalExamsTab"
        static let practicalTab = "practicalExamsTab"
        static let studyTab = "studyTab"
        static let performanceTab = "performanceTab"
        
        static let startExamButton = "startExamButton"
        static let questionCard = "questionCard"
        static let settingsButton = "settingsButton"
        
        // Identificadores para elementos de questão
        static let optionButton = "optionButton_"
        static let explanationSection = "explanationSection"
        
        // Identificadores para linhas de exame
...
